# wvprs

./: .gitignore  Cargo.toml  README.md  build.rs
config/: config.yaml
example/: wvprs.log.2025-02-11  wvprs.sip.ok.pcapng
src/: main.rs  version.rs
src/http/: server.rs
src/http/handler/live/: play.rs  stop.rs
src/http/handler/replay/: start.rs  stop.rs
src/http/message/live/: keep_alive.rs  play.rs  stop.rs
src/http/message/replay/: keep_alive.rs  mod.rs  start.rs  stop.rs
src/proto/: gss.proto
src/sip/: server.rs
src/sip/handler/: ack.rs  bye.rs  cancel.rs  info.rs  invite.rs  mod.rs  notify.rs  options.rs  prack.rs  publish.rs  refer.rs  register.rs  subscribe.rs  update.rs
src/sip/handler/message/: mod.rs  on_catalog.rs  on_device_info.rs  on_device_status.rs  on_keep_alive.rs
src/sip/message/: catalog.rs  device_info.rs  device_status.rs  keep_alive.rs  mod.rs  sdp.rs
src/sip/request/: bye.rs  invite.rs
src/sip/request/message/: catalog.rs  device_info.rs  device_status.rs  mod.rs
src/sip/utils/: auth.rs  codec.rs  sock.rs
src/sip/utils/header/: caller_id.rs  from.rs  tag.rs  to.rs  via.rs
src/store/: memory.rs  mod.rs  mysql.rs  not_impl.rs  pg.rs  redis.rs
src/utils/: cli.rs  config.rs  kmp.rs  log.rs  mod.rs
