[package]
name = "wvprs"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["gmaui000@163.com"]
publish = false

[dependencies]
anyhow = "1.0.94"
actix-web = { version = "4.9.0" }
async-trait = { version = "0.1.83" }
chrono = { version = "0.4.39" }
encoding_rs = { version = "0.8.35" }
local-ip-address = { version = "0.6.3" }
prost = { version = "0.13.4" }
prost-types = { version = "0.13.4" }
rand = { version = "0.8.5" }
regex = { version = "1.11.1" }
rsip = { version = "0.4.0" }
sdp-rs = { version = "0.2.1" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133" }
serde_yaml = "0.9.33"
serde-xml-rs = { version = "0.6.0" }
structopt = { version = "0.3.26" }
textcode = { version = "0.2.2" }
time = { version = "0.3.37", features = ["formatting", "macros"] }
clap = { version = "4.5.23", features = ["derive"] }
tracing = { version = "0.1.41" }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time", "local-time", "json"] }
tokio = { version = "1.42.0", features = ["full"] }
tonic = { version = "0.12.3" }
uuid = { version = "1.11.0", features = ["v4", "zerocopy"] }
vec1 = { version = "1.12.1" }
sysinfo = "0.33.0"
dashmap = "6.1"

[build-dependencies]
regex = { version = "1.11.1" }
tonic-build = { version = "0.12.3" }
walkdir = { version = "2.5.0" }


